Replace TextBox with NumberBox for Frame Count input
Changed the Frame Count input control from a TextBox to a ui:NumberBox and updated the binding from Text to Value for improved numeric input handling.

--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -254,12 +254,12 @@
                                                 <RowDefinition Height="Auto" />
                                             </Grid.RowDefinitions>
                                             <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Frame Count" />
-                                            <TextBox
+                                            <ui:NumberBox
                                                 Grid.Row="1"
                                                 Background="{DynamicResource ControlFillColorDefaultBrush}"
                                                 BorderBrush="{DynamicResource ControlElevationBorderBrush}"
                                                 Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                                Text="{Binding Prop.FrameCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                                Value="{Binding Prop.FrameCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                         </Grid>
                                     </UniformGrid>
                                 </StackPanel>
