Enable drag-and-drop for terrains tree view
Added TerrainsTreeViewDropHandler to support drag-and-drop reordering of terrain items in the tree view. Updated TerrainBrace to use ObservableCollection and added IsAncestorOf for hierarchy checks. Modified TerrainsViewModel and TerrainObjectPage.xaml to integrate drag-and-drop functionality using GongSolutions.Wpf.DragDrop.

--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:eTools_Ultimate.Models"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -118,6 +119,11 @@
                 <TreeView
                     x:Name="TerrainsTreeView"
                     VerticalAlignment="Stretch"
+                    dd:DragDrop.DragDropContext="TerrainsTreeView"
+                    dd:DragDrop.DropHandler="{Binding DragDropHandler}"
+                    dd:DragDrop.IsDragSource="True"
+                    dd:DragDrop.IsDropTarget="True"
+                    dd:DragDrop.SelectDroppedItems="True"
                     Background="Transparent"
                     BorderThickness="0"
                     ItemsSource="{Binding TerrainsView}"
