Select first item on TerrainsTreeView load
Added TerrainsTreeView_Loaded event handler to automatically select the first item when the TreeView is loaded. This improves user experience by ensuring an item is selected by default.

--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -127,6 +127,7 @@
                     Background="Transparent"
                     BorderThickness="0"
                     ItemsSource="{Binding TerrainsView}"
+                    Loaded="TerrainsTreeView_Loaded"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
                     <TreeView.Resources>
                         <!--  Template for braces  -->
