--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -313,19 +313,14 @@
                         Margin="0,0,10,0"
                         Appearance="Secondary"
                         Content="Expert" />
+                    
                     <ui:Button
                         Margin="0,0,10,0"
-                        Appearance="Secondary"
-                        Content="Filter" />
+                        Background="#2F70AF"
+                        Content="Add" />
                     <ui:Button
-                        Margin="0,0,10,0"
-                        Background="{DynamicResource AccentFillColorDefaultBrush}"
-                        Content="Add"
-                        Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}" />
-                    <ui:Button
-                        Background="{DynamicResource SystemFillColorCriticalBrush}"
-                        Content="Delete"
-                        Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}" />
+                        Background="#FD292F"
+                        Content="Delete" />
                 </StackPanel>
 
                 <!--  Forms  -->
